<resources>
    <string name="app_name">UPV Welcome Incoming</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="menu_option1">Home</string>
    <string name="menu_option2">Calendar</string>
    <string name="menu_option3">Info</string>
    <string name="menu_option4">Translate</string>
    <string name="title_activity_translate">KitDEV</string>
    <string name="btnSay">Say something in english</string>
    <string name="btnListen">Listen in spanish</string>
    <string name="sinConn">Without connection. Check your mobile settings.</string>
    <string name="btn_OK">OK</string>
    <string name="err_audio">Audio error, try again please</string>
    <string name="err_client">Client error, try again please</string>
    <string name="err_network">Network error, check settings please</string>
    <string name="err_server">Server error, check settings please</string>
    <string name="err_no_match">No match error, try again please</string>
    <string name="err_no_TTS">Error in speaker. Try again later.</string>
    <string name="err_no_text_TTS">There is not text to speak.</string>
    <string name="err_install_TTS">Please, install text to speech service of Android.</string>
    <string name="title_activity_speaker">Reproductor</string>
    <string name="btnRepeat">Repeat</string>
    <string name="btnBack">Go Back</string>
    <string name="cphrase_1_es">¿Dónde está la escuela de informática?</string>
    <string name="cphrase_1">Where is the computer science university?</string>
    <string name="cphrase_2_es">¿Dónde está la cafetería más cercana?</string>
    <string name="cphrase_2">Where is the school cafeteria near here?</string>
    <string name="cphrase_3_es">¿Cuál es mi horario?</string>
    <string name="cphrase_3">Which is my schedule?</string>
    <string name="cphrase_4_es">¿Dónde está la parada de autobús?</string>
    <string name="cphrase_4">Where is the bus stop near here?</string>
    <string name="cphrase_5_es">¿Dónde está la parada de metro?</string>
    <string name="cphrase_5">Where is the tram stop near here?</string>
    <string name="cphrase_6_es">¿Dónde está secretaría?</string>
    <string name="cphrase_6">Where is secretary office?</string>
    <string name="cphrase_7_es">¿Dónde está la oficina de relaciones internacionales?</string>
    <string name="cphrase_7">Where is International office?</string>
    <string name="cphrase_8_es">¿Dónde está la oficina de Programas Internacionales de Intercambio?</string>
    <string name="cphrase_8">Where is the Office of International Exchange Programs?</string>
    <string name="btnAvion">Plane</string>
    <string name="btnTaxi">Taxi</string>
    <string name="btnMetro">Subway</string>
    <string name="btnBus">Bus</string>
    <string name="btnCarretera">Roads</string>
    <string name="btnTren">Train</string>
    <string name="btnMar">Sea</string>
    <string name="title_activity_avion">Plane</string>
    <string name="nomEscuela">Name</string>
    <string name="urlP">Main url</string>
    <string name="urlD">Teaching url</string>
    <string name="mail">School mail</string>
    <string name="fax">School fax</string>
    <string name="nomCoor">Coordinator name</string>
    <string name="mailCoor">Coordinator mail</string>
    <string name="telfCoor">Coordinator phone</string>
    <string name="nomTec">Tech name</string>
    <string name="mailTec">Tech mail</string>
    <string name="telfTec">Tech phone</string>
    <string name="extTec">Tech extension</string>
    <string name="transporte">Transport</string>
    <string name="valencia">Valencia</string>
    <string name="escuelas">Schools</string>
    <string name="asignaturas">Subjects</string>
    <string name="btnAutocar">Autocar</string>
    <string name="contacto">Contact</string>
    <string name="telefonos">Phone:</string>
    <string name="sitioWeb">Web Site:</string>
    <string name="selecInfo">Choose the building you want to find:</string>
    <string-array name="edificios">
        <item>Building 1B</item>
        
        <item>Building 1C</item>
        
        <item>Building 1G</item>
        
        <item>Building 1H</item>
        
        <item>Building 2F</item>
        
        <item>Building 3H</item>
        
        <item>Building 3M</item>
        
        <item>Building 3P</item>
        
        <item>Building 4D</item>
        
        <item>Building 4H</item>
        
        <item>Building 5F</item>
        
        <item>Building 7B</item>
        
        <item>Building 7I</item>
        
        <item>Building 7J</item>
        
    </string-array>
    <string-array name="lenguages">
        <item>English</item>
        <item>Español</item>
    </string-array>
    <string name="title_activity_ra_activity">Augmented Reality</string>
    <string name="txt_noticias">News</string>
    <string name="txt_noticia">New</string>
    <string name="loading">Loading...</string>
    <string name="connecting">Connecting to UPV...</string>
    <string name="menu_option5">Locate</string>
    <string name="menu_option6">Options</string>
    <string name="menu_option7">Forum</string>
    <string name="obtainCalendars">Getting calendars</string>
    <string name="login">Log in</string>
    <string name="dni">Introduce your DNI/NIE</string>
    <string name="pin">Introduce your pin</string>
    <string name="downloading">Downloading events</string>
    <string name="noevents">There is no events</string>
    <string name="txt_calendarios">Calendars</string>
    <string name="txt_opciones">Options</string>
    <string name="acercade">About</string>
    <string name="idioma">Lenguage</string>
    <string name="sesion">Session</string>
    <string name="alertas">Notifications</string>
    <string name="perfil">Profile</string>
    <string name="alertaCalendar">Calendar notifications</string>
    <string name="idiomaseleccionado">Selected language</string>
    <string name="nosesion">You are not logged in</string>
    <string name="sisesion">Logged as:</string>
    <string name="alertaForum">Forum notification</string>
    <string name="profile">Profile</string>
    <string name="telefonoUPV1">(+34) 96 387 70 00</string>
    <string name="faxUPV">(+34) 96 387 90 09</string>
    <string name="direccionUPV">Camino de Vera, s/n 46022 Valencia</string>
    <string name="web">Web</string>
    <string name="webUPV">www.upv.es</string>
    <string name="emailUPV">informacion@upv.es</string>
    <string name="email">Email</string>
    <string name="direccion">Address</string>
    <string name="upv">UPV</string>
    <string name="actualizar">Refresh</string>
    <string name="downloading_news">Downloading news</string>
    <string name="filtro">Sort</string>
    <string name="ordenarAsignaturas">Sort by subjetcs</string>
    <string name="ordenarFecha">Sort by date</string>
    <string name="title_activity_activity__filtros">Filters</string>
    <string name="selecAsignatura">Select a subject</string>
    <string name="aceptar">Ok</string>
    <string name="cancelar">Cancel</string>
    <string name="quitarFiltro">Remove filter</string>
    <string name="selecFecha">Select a date</string>
    <string name="title_activity_activity_filtros_asignatura">Filter by subject</string>
    <string name="title_activity_activity_filtros_fecha">Filter by date</string>
    <string name="mapa_upv">UPV Map</string>
    <string name="infoupv">Info UPV</string>
    <string name="info">Info</string>
    <string name="bicistotal">Total</string>
    <string name="bicisdisponibles">Available</string>
    <string name="detectar_idioma">DETECT LANGUAGE</string>
    <string name="noText">There is no text</string>
    <string name="textCopyToClipboard">Text copied to clipboard</string>
    <string name="compartirTraduccion">Share translation</string>
    <string name="idiomaNoDetectado">Language not detected</string>
    <string name="seleccione_idioma">Please, select a language</string>
    <string name="noSoportaSpeechToText">Your smartphone doesnt support this feature</string>
    <string name="title_activity_activity_login">Login activity</string>
    <string name="identificarse">Log in</string>
    <string name="help_dni">- The incoming students will put the passport number or NIE instead of the DNI.</string>
    <string name="help_PIN">- In the PIN blank, you need to write the code from the automatricula.</string>
    <string name="incorrect_dni_pin">Incorrect DNI or PIN.</string>
    <string name="error">Error</string>
    <string name="errorlogin">An error ocurred while logging in. Check your log in data.</string>
    <string name="updating">Updating...</string>
    <string name="edificio">Building</string>
    <string name="mapas">Maps</string>
    <string name="encontrarEdificio">Find the building</string>
    <string name="UPV_map">UPV building map</string>
    <string name="valenbisi_map">Valenbisi map</string>
    <string name="metro_map">Subway map</string>
    <string name="emt_map">EMT map</string>
    <string name="interes_map">Places of Interest map</string>
    <string name="tutorial_drawer_title">Functions panel</string>
    <string name="tutorial_drawer_message">Tap the icon to open the functions panel</string>
    <string name="tutorial_options_title">Log in</string>
    <string name="tutorial_options_message">This option allows you to log in or log out if you already logged</string>
    <string name="lineas">Lines</string>
    <string name="informaciononline">Go to the station web</string>
    <string name="emt">EMT</string>
    <string name="metrovalencia">Metrovalencia</string>
    <string name="mapa_estatico">Static Map</string>
    <string name="googlemaps">Google maps</string>
    <string name="noresults">No results</string>
    <string name="conexionInternet">Internet connection</string>
    <string name="internet1">Seems like you haven\'t internet connection on your phone.</string>
    <string name="internet2">In order to have full functionality you need to connect to the internet.</string>
    <string name="gotosettings">Go to settings</string>
    <string name="noInetCalendar">If you downloaded calendars once, you will see you calendars without internet. Otherwise you need to connect to the internet to be able to download contect. It is recommended to have internet connection</string>
    <string name="noInetBlock">To access to this feature, you need internet connection. Please, connect to the internet:</string>
    <string name="noInetMaps">If you have openned the map functionallity before, you will be able to look the maps without updated content. We recommend you to connect to internet for a better experience.</string>
    <string name="noInetValenbisi">There is no internet connection to obtain updated information about Valenbisi stations. Please connect to the internet to access full functionallity.</string>
    <string name="alarm">Alarm</string>
    <string name="ordenarAlarm">Show events with alarm</string>
    <string name="clasecomienza">The class is about to start</string>
    <string name="maps">Mapas</string>
    <string name="title_activity_activity__notificacion__evento">Event</string>
    <string name="ocultar">Hide</string>
    <string name="ayuntamiento">City Hall</string>
    <string name="police">Police</string>
    <string name="bomberos">Firefighters</string>
    <string name="title_activity_activity__acercade">About</string>
    <string name="autores">Authors</string>
    <string name="cristian">Cristian López Espejo</string>
    <string name="marcos">Marcos Perelló Soto</string>
</resources>