<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_background"
        android:orientation="vertical"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_centerInParent="true"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_signup"
            style="@style/ShadowText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_login_header"
            android:gravity="center"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFF"
            android:textColorLink="@color/text_link"
            android:text="@string/identificarse" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp">

                <TextView
                    style="@style/ShadowText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/dni"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text" />

                <AutoCompleteTextView
                    android:id="@+id/et_dni"
                    style="@style/SignInEditText"
                    android:completionThreshold="1"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/et_password" />

                <TextView
                    style="@style/ShadowText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:text="@string/pin"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text" />

                <EditText
                    android:id="@+id/et_pin"
                    style="@style/SignInEditText"
                    android:imeOptions="actionDone"
                    android:maxLength="4"
                    android:inputType="numberPassword"
                    android:password="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/incorrect_dni_pin"
                    android:id="@+id/tv_datosIncorrectos"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#c21b1b" />

                <Button
                    android:id="@+id/btn_login"
                    style="@style/ShadowText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_background_states"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:background="@drawable/divisor"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_dni"
                    android:id="@+id/textView"
                    android:layout_marginTop="15dp"
                    android:textColor="#979490"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_PIN"
                    android:id="@+id/textView2"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#979490"
                    android:layout_marginBottom="15dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>