<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_pink"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/upv_info"
            android:layout_alignParentTop="false"
            android:layout_alignParentBottom="false"
            android:adjustViewBounds="true" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollView"
        android:layout_weight="5"
        android:background="@color/light_pink">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/linearLayout1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/abc_search_url_text_normal">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Base.SearchResult.Title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contacto"
                        android:id="@+id/tvContactoTitulo"
                        android:gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:id="@+id/linearLayout">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/telefonos"
                            android:id="@+id/txtContactoTlfs"
                            android:gravity="left"
                            android:layout_margin="10dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/telefonoUPV1"
                            android:id="@+id/txtContactoTlf1"
                            android:gravity="right"
                            android:layout_gravity="center"
                            android:autoLink="phone" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/divisor"
                        android:id="@+id/imageView2" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fax"
                            android:id="@+id/txtContactoFax"
                            android:layout_margin="10dp" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/faxUPV"
                            android:id="@+id/textView5"
                            android:gravity="right"
                            android:layout_gravity="center"
                            android:autoLink="phone" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/divisor"
                        android:id="@+id/imageView3" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/direccion"
                            android:id="@+id/txtContactoDireccion"
                            android:layout_margin="10dp" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/direccionUPV"
                            android:id="@+id/txtContactoDireccion1"
                            android:gravity="right"
                            android:layout_gravity="center"
                            android:autoLink="map"
                            android:autoText="false" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/divisor"
                        android:id="@+id/imageView4" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/web"
                            android:id="@+id/txtContactoWeb"
                            android:layout_margin="10dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/webUPV"
                            android:id="@+id/txtContactoWeb1"
                            android:gravity="right"
                            android:layout_gravity="center"
                            android:autoLink="web"
                            android:autoText="false" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/divisor"
                        android:id="@+id/imageView5" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:id="@+id/txtContactoEmail"
                            android:layout_margin="10dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/emailUPV"
                            android:id="@+id/txtContactoEmailE"
                            android:gravity="right"
                            android:layout_gravity="center"
                            android:autoText="false"
                            android:linksClickable="false"
                            android:autoLink="email" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/divisor"
                        android:id="@+id/imageView6" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>